--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.mysql-connector-java-8.0.29.jar=jar/mysql-connector-java-8.0.29.jar
+file.reference.omnifaces-4.0.jar=C:\\Users\\killua\\Downloads\\omnifaces-4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +47,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${file.reference.omnifaces-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
