--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-8.0.29.jar=jar/mysql-connector-java-8.0.29.jar
-file.reference.omnifaces-4.0.jar=C:\\Users\\killua\\Downloads\\omnifaces-4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,9 +44,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${libs.hibernate4-support.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${file.reference.omnifaces-4.0.jar}
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -75,6 +71,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -90,6 +87,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Library_JSF.war
+war.name=Libarry_JSF.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
