--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\killua\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv337817544.properties
+deploy.ant.properties.file=C:\\Users\\Roger Simanjuntak\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3801949046.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/killua/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
+j2ee.server.domain=C:/Users/Roger Simanjuntak/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/Brave
-user.properties.file=C:\\Users\\killua\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+selected.browser=default
+user.properties.file=C:\\Users\\Roger Simanjuntak\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
