--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\Roger Simanjuntak\\Downloads\\mysql-connector-java-8.0.29.jar
+file.reference.mysql-connector-java-8.0.29.jar=jar/mysql-connector-java-8.0.29.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
