--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,8 +51,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.BootsFaces-OSP-1.5.0.jar}:\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${file.reference.BootsFaces-OSP-1.5.0.jar}
     ${file.reference.mysql-connector-java-8.0.29.jar-1}
 =======
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
